[gd_scene load_steps=13 format=3 uid="uid://bd7pymirftvht"]

[ext_resource type="Script" uid="uid://m4rid21jdo8v" path="res://cart.gd" id="1_aph70"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4bypq"]
albedo_color = Color(0.7529412, 0.7529412, 0.7529412, 1)
metallic = 0.7
roughness = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_rb7fp"]
material = SubResource("StandardMaterial3D_4bypq")
size = Vector3(1, 0.8, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_jplhf"]
size = Vector3(1, 0.8, 1.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_esel8"]
albedo_color = Color(0.8784314, 0.8784314, 0.8784314, 1)
metallic = 0.8
roughness = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vrp51"]
albedo_color = Color(0.7529412, 0.7529412, 0.7529412, 1)
metallic = 0.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oxgae"]
albedo_color = Color(0.827451, 0.827451, 0.827451, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_73stm"]
albedo_color = Color(0.2509804, 0.2509804, 0.2509804, 1)
roughness = 0.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u6efw"]
albedo_color = Color(0.7529412, 0.7529412, 0.7529412, 1)
metallic = 0.95

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rsqm5"]
albedo_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
roughness = 0.95

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vr010"]
albedo_color = Color(1, 0.41960785, 0.41960785, 1)
roughness = 0.6

[sub_resource type="SphereShape3D" id="SphereShape3D_hh8b0"]
radius = 1.5

[node name="Cart" type="PathFollow3D"]
loop = false
script = ExtResource("1_aph70")

[node name="CartBody" type="Node3D" parent="."]

[node name="CartMesh" type="MeshInstance3D" parent="CartBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_rb7fp")

[node name="CartCollision" type="Area3D" parent="CartBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 9
collision_mask = 131

[node name="CartCollisionShape" type="CollisionShape3D" parent="CartBody/CartCollision"]
shape = SubResource("BoxShape3D_jplhf")

[node name="CartVisual" type="Node3D" parent="CartBody"]

[node name="Basket" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
size = Vector3(0.9, 0.6, 1.1)
material = SubResource("StandardMaterial3D_esel8")

[node name="Wall_Front" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.55)
size = Vector3(0.9, 0.6, 0.05)
material = SubResource("StandardMaterial3D_vrp51")

[node name="Wall_Back" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.55)
size = Vector3(0.9, 0.6, 0.05)
material = SubResource("StandardMaterial3D_vrp51")

[node name="Wall_Left" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, 0.5, 0)
size = Vector3(0.05, 0.6, 1.1)
material = SubResource("StandardMaterial3D_vrp51")

[node name="Wall_Right" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.45, 0.5, 0)
size = Vector3(0.05, 0.6, 1.1)
material = SubResource("StandardMaterial3D_vrp51")

[node name="Basket_Bottom" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.22, 0)
size = Vector3(0.85, 0.05, 1.05)
material = SubResource("StandardMaterial3D_oxgae")

[node name="Handle_Bar" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -0.6)
size = Vector3(0.8, 0.05, 0.05)
material = SubResource("StandardMaterial3D_73stm")

[node name="Handle_Post_Left" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.65, -0.6)
size = Vector3(0.05, 0.5, 0.05)
material = SubResource("StandardMaterial3D_u6efw")

[node name="Handle_Post_Right" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.65, -0.6)
size = Vector3(0.05, 0.5, 0.05)
material = SubResource("StandardMaterial3D_u6efw")

[node name="Wheel_FL" type="CSGCylinder3D" parent="CartBody/CartVisual"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -0.4, 0.1, 0.5)
radius = 0.1
height = 0.1
material = SubResource("StandardMaterial3D_rsqm5")

[node name="Wheel_FR" type="CSGCylinder3D" parent="CartBody/CartVisual"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0.4, 0.1, 0.5)
radius = 0.1
height = 0.1
material = SubResource("StandardMaterial3D_rsqm5")

[node name="Wheel_BL" type="CSGCylinder3D" parent="CartBody/CartVisual"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -0.4, 0.1, -0.5)
radius = 0.1
height = 0.1
material = SubResource("StandardMaterial3D_rsqm5")

[node name="Wheel_BR" type="CSGCylinder3D" parent="CartBody/CartVisual"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0.4, 0.1, -0.5)
radius = 0.1
height = 0.1
material = SubResource("StandardMaterial3D_rsqm5")

[node name="ChildSeat_Flap" type="CSGBox3D" parent="CartBody/CartVisual"]
transform = Transform3D(1, 0, 0, 0, 0.9396926, -0.34202012, 0, 0.34202012, 0.9396926, 0, 0.5, 0.6)
size = Vector3(0.4, 0.3, 0.05)
material = SubResource("StandardMaterial3D_vr010")

[node name="ItemContainer" type="Node3D" parent="CartBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="CartLabel" type="Label3D" parent="CartBody"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 1.1, -0.6)
text = "CART"
outline_size = 8

[node name="InteractionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 32768

[node name="InteractionShape" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("SphereShape3D_hh8b0")
